# parth-20-07.github.io

./: .gitignore  .nomedia  404.html  README.md  feed_rss_created.xml  feed_rss_updated.xml  index.html  index.md  mkdocs.yml  personal.md  publish.css  pyproject.toml
.github/workflows/: ci.yml  (+1 more)
Annotated Papers/: index.html
Annotated_Papers/: AP_Meal_Simulation_Model_of_Glucose_Insulin_System.md  AP_Swarm_SLAM_Challenges_and_Perspectives.md  index.html
Clippings/: Root Shell on Credit Card Terminal.md  lmapiipractical-zephyr Freestanding applications for the article series Practical Zephyr..md  lmapiirun-clang-tidy CLI application to run clang-tidy on a set of files specified using globs in a JSON configuration file..md
Essential_Reads/: Non-Fiction.md
Life OS 2024/: Catalogue list.md  Job Application Tracker.md  Movie List.md  Shopping List.md
Life_OS_2024/: Movie List.md
Products/: BLE_Smart_Switch.md  Inventory_Management_System.md  Smart_AQI_Monitor.md  Smart_Farm_Network.md  product_index.md
Projects/: 2DoF_RRBot_EoM.md  Analytical_Convergence_Bounds_of_Distributed_Intermittent_Swarm_Communication.md  Gearbox_Disassembly_using_RRT_Algorithm_in_3D_Space.md  IMU_Sensor_Fusion_for_Attitude_Estimation.md  RRT_and_RRT-star_Implementation_in_Unity_3D.md  Robot_Teleoperation_with_Augmented_Reality_Virtual_Surrogates.md  Trajectory_Tracking_using_Robust_Controller_for_a_2_DoF_RRBot.md
Study Notes/Docker/: index.html
Study_Notes/: Study Notes.md
Templates/: Study Notes Template.md
docs/: index.md
search/: search_index.json
stylesheets/: extra.css
(+414 files in other folders)
