[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Parth Patel <parth.pmech@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-rss-plugin = "^1.16.0"
mkdocs-resize-images = "^1.0.1"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
